tests/parsing/smtlib/poly/errors/145_function_dec_bad_return_sort_1.expected
File "tests/parsing/smtlib/poly/errors/145_function_dec_bad_return_sort_1.psmt2", line 2, character 26-27:
2 | (define-funs-rec ((foo () _)))
                              ^
Error while parsing a function declaration, read the reserved word '_',
      but expected a sort for the return type of the function.
